--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 node_modules/.cache/@babel/register/.babel.7.16.0.development.json
+node_modules/.cache/@babel/register/.babel.7.16.0.development.json
