--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 node_modules/.cache/@babel/register/.babel.7.16.0.development.json
 node_modules/.cache/@babel/register/.babel.7.16.0.development.json
+*.json
