--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules/yallist/yallist.js
 node_modules/yallist/LICENSE
 node_modules/yallist/iterator.js
 node_modules/
+build/
 .env
 *.json
 node_modules/.cache/@babel/register/.babel.7.16.0.development.json
